<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size20"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/size16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextView_6"
            android:text="@string/txt_scheduled_messages"
            android:textColor="@color/col_main"
            android:textSize="@dimen/size16" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateMess"
            style="@style/TextView_4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size34"
            android:layout_marginTop="@dimen/size16"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/size16"
            android:stateListAnimator="@null"
            android:text="@string/txt_update_the_message"
            android:textAllCaps="false"
            android:textSize="@dimen/size14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendNow"
            style="@style/TextView_4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size34"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/size16"
            android:stateListAnimator="@null"
            android:text="@string/txt_send_now"
            android:textAllCaps="false"
            android:textSize="@dimen/size14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            style="@style/TextView_4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size34"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/size16"
            android:stateListAnimator="@null"
            android:text="@string/txt_delete"
            android:textAllCaps="false"
            android:textSize="@dimen/size14" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>