<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size40"
        android:padding="@dimen/size16"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/size24"
            android:layout_height="@dimen/size24"
            android:src="@drawable/ic_arr_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/col_main" />

        <TextView
            android:id="@+id/tvMenu"
            style="@style/TextView_7"
            android:layout_marginStart="@dimen/size16"
            android:text="@string/txt_menu"
            android:textColor="@color/col_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size16"
        app:layout_constraintTop_toBottomOf="@+id/clTop">

        <!-- Archived -->
        <LinearLayout
            android:id="@+id/llArchived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/size16">

            <ImageView
                android:layout_width="@dimen/size24"
                android:layout_height="@dimen/size24"
                android:src="@drawable/ic_archive"
                app:tint="@color/col_main" />

            <TextView
                style="@style/TextView_6"
                android:layout_marginStart="@dimen/size16"
                android:text="@string/txt_archived"
                android:textColor="@color/col_main" />
        </LinearLayout>

        <!-- Backup and restore -->
        <LinearLayout
            android:id="@+id/llBackup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/size16">

            <ImageView
                android:layout_width="@dimen/size24"
                android:layout_height="@dimen/size24"
                android:src="@drawable/ic_backup"
                app:tint="@color/col_main" />

            <TextView
                style="@style/TextView_6"
                android:layout_marginStart="@dimen/size16"
                android:text="@string/txt_backup_and_restore"
                android:textColor="@color/col_main" />
        </LinearLayout>

        <!-- Set Password -->
        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/size16"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/size24"
                android:layout_height="@dimen/size24"
                android:src="@drawable/ic_lock"
                app:tint="@color/col_main" />

            <TextView
                style="@style/TextView_6"
                android:layout_marginStart="@dimen/size16"
                android:text="@string/txt_set_password"
                android:textColor="@color/col_main" />
        </LinearLayout>

        <!-- Scheduled -->
        <LinearLayout
            android:id="@+id/llScheduled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/size16">

            <ImageView
                android:layout_width="@dimen/size24"
                android:layout_height="@dimen/size24"
                android:src="@drawable/ic_schedule"
                app:tint="@color/col_main" />

            <TextView
                style="@style/TextView_6"
                android:layout_marginStart="@dimen/size16"
                android:text="@string/txt_scheduled"
                android:textColor="@color/col_main" />
        </LinearLayout>

        <!-- Blocking -->
        <LinearLayout
            android:id="@+id/llBlocking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/size16">

            <ImageView
                android:layout_width="@dimen/size24"
                android:layout_height="@dimen/size24"
                android:src="@drawable/ic_block"
                app:tint="@color/col_main" />

            <TextView
                style="@style/TextView_6"
                android:layout_marginStart="@dimen/size16"
                android:text="@string/txt_blocking"
                android:textColor="@color/col_main" />
        </LinearLayout>

    </LinearLayout>
    <!-- About -->
    <LinearLayout
        android:id="@+id/llAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/size16"
        android:paddingVertical="@dimen/size12"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/size24"
            android:layout_height="@dimen/size24"
            android:src="@drawable/ic_setting_about"
            app:tint="@color/col_main" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size16"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextView_6"
                android:text="@string/txt_about_color_sms"
                android:textColor="@color/col_main" />

            <TextView
                style="@style/TextView_4"
                android:text="@string/txt_version"
                android:textColor="@color/col_main" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>