<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size16"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextView_7"
            android:text="@string/txt_themes"
            android:textColor="@color/col_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="@dimen/size24"
            android:layout_height="@dimen/size24"
            android:contentDescription="@null"
            android:src="@drawable/ic_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/col_main" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/vLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size1"
        android:background="@color/col_14000000"
        app:layout_constraintTop_toBottomOf="@+id/clTopBar" />

    <HorizontalScrollView
        android:id="@+id/hsvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/size12"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/vLine">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/size16">

            <TextView
                android:id="@+id/tvAll"
                style="@style/TextView_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_category_selected"
                android:paddingHorizontal="@dimen/size16"
                android:paddingVertical="@dimen/size8"
                android:text="@string/txt_all"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvBasic"
                style="@style/TextView_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size8"
                android:background="@drawable/bg_category_unselected"
                android:paddingHorizontal="@dimen/size16"
                android:paddingVertical="@dimen/size8"
                android:text="@string/txt_basic"
                android:textColor="@color/col_main" />

            <TextView
                android:id="@+id/tvRomantic"
                style="@style/TextView_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size8"
                android:background="@drawable/bg_category_unselected"
                android:paddingHorizontal="@dimen/size16"
                android:paddingVertical="@dimen/size8"
                android:text="@string/txt_romantic"
                android:textColor="@color/col_main" />

            <TextView
                android:id="@+id/tvAnimal"
                style="@style/TextView_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size8"
                android:background="@drawable/bg_category_unselected"
                android:paddingHorizontal="@dimen/size16"
                android:paddingVertical="@dimen/size8"
                android:text="@string/txt_animal"
                android:textColor="@color/col_main" />

            <TextView
                android:id="@+id/tvNature"
                style="@style/TextView_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size8"
                android:background="@drawable/bg_category_unselected"
                android:paddingHorizontal="@dimen/size16"
                android:paddingVertical="@dimen/size8"
                android:text="@string/txt_nature"
                android:textColor="@color/col_main" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvThemes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/size8"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsvCategories"
        app:spanCount="2"
        tools:listitem="@layout/item_theme" />

</androidx.constraintlayout.widget.ConstraintLayout>